Close #29: Prevent comments from overflowing the contents area

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -47,6 +47,7 @@
     margin: 0;
     padding: 0;
     width: 100%;
+    word-wrap: break-word;
 }
 .forum_topic > div {
     margin: 0 0 0.5em 0;
